--- a/peerChat/chat.html
+++ b/peerChat/chat.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
 
-    <title>Chat.elm</title>
+    <title>peerChat.elm</title>
     <!--The elm-runtime-->
     <script type="text/javascript" src="chat.js"></script>
     <!--The javascript library that allows friendly WebRTC connections-->
