--- a/peerChat/chat.html
+++ b/peerChat/chat.html
@@ -4,12 +4,11 @@
 
     <meta charset="utf-8">
 
-    <title>peerChat.elm</title>
+    <title>peerChat</title>
     <!--The elm-runtime-->
     <script type="text/javascript" src="chat.js"></script>
     <!--The javascript library that allows friendly WebRTC connections-->
     <script type="text/javascript" src="http://cdn.peerjs.com/0.3/peer.js"></script>
-    <!--API Key: paybp3uioh66flxr -->
     <!--Our custom styles -->
     <link rel="stylesheet" type="text/css" href="chat.css">
 </head>
